<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/loginback">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat_alternates_semibold"
        android:layout_marginTop="180dp"
        />
    <EditText
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Namae"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="280dp"
        android:background="@color/bg"
        android:minHeight="48dp"

        />

    <EditText
        android:id="@+id/Surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Surname"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="350dp"
        android:background="@color/bg"
        android:minHeight="48dp"

        />
    <EditText
        android:id="@+id/Group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Group"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="420dp"
        android:background="@color/bg"
        android:minHeight="48dp"
        />

    <Button
        android:id="@+id/Log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="500dp"
        android:backgroundTint="@color/yellow"
        android:onClick="Cancel"
        android:text="@string/Login" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="70dp"
        android:backgroundTint="@color/yellow"
        android:onClick="Cancel"
        android:text="@string/Cancel" />
</RelativeLayout>