<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".MainActivity"
    >


    <RelativeLayout
        android:id="@+id/FirstLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/blue">

        <TextView
            android:id="@+id/Hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_alternates_semibold"
            android:text="@string/Hello"
            android:textColor="@color/black"
            android:textSize="40sp">

        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/tasks"
            android:textSize="20sp"
            android:fontFamily="@font/montserrat_alternates_semibold"
            android:layout_marginHorizontal="50dp"
            android:layout_below="@+id/Hello">

        </TextView>


    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/box"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/FirstLayout"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="20dp"
        android:background="@color/blue"
        >

        <Button
            android:id="@+id/Log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/yellow"
            android:onClick="onClick"
            android:text="@string/Login"
            android:textColor="@color/black"
            android:textSize="20sp">

        </Button>

    </RelativeLayout>


    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="320dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/cloudvector"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/blue">


        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="Tasks"
            android:backgroundTint="@color/yellow"
            android:layout_marginTop="10dp"
            />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/yellow"
            android:onClick="goToClowns"
            android:text="Clowns" />
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="Sigmas"
            android:backgroundTint="@color/yellow"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="200dp">


        <EditText
            android:id="@+id/edit1"
            android:minHeight="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Write Task"
            android:inputType="text"/>
        <EditText
            android:id="@+id/edit2"
            android:minHeight="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="Write Task" />





    </LinearLayout>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@id/Vertical"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="60dp"
        android:backgroundTint="@color/blue"
        android:onClick="SaveData"
        android:text="Save"
        android:textColor="@color/black" />

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@id/Vertical"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="@color/blue"
        android:onClick="GetData"
        android:text="Get"
        android:textColor="@color/black" />

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="230dp"
        android:layout_marginHorizontal="50dp"
        >


    </FrameLayout>

</RelativeLayout>